Making header responsive and adding spspacer to prevent header overlapping content

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -258,3 +258,9 @@ header {
     position: absolute;
     bottom: 0;
 }
+
+.spacer
+{
+    width: 100%;
+    height: 95px;
+}
